Extract interface from local implementations.