@@ -8,8 +8,8 @@ import java.util.Collections;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
-import org.wildfly.clustering.server.Group;
-import org.wildfly.clustering.server.GroupMember;
+import org.wildfly.clustering.server.local.LocalGroup;
+import org.wildfly.clustering.server.local.LocalGroupMember;
 import org.wildfly.clustering.server.provider.ServiceProviderListener;
 import org.wildfly.clustering.server.provider.ServiceProviderRegistrar;
 import org.wildfly.clustering.server.provider.ServiceProviderRegistration;
@@ -17,41 +17,41 @@ import org.wildfly.clustering.server.provider.ServiceProviderRegistration;
 /**
  * Factory that provides a non-clustered {@link ServiceProviderRegistration} implementation.
  * @param <T> the service provider type
- * @param <M> the group member type
  * @author Paul Ferraro
  */
-public class LocalServiceProviderRegistrar<T, M extends GroupMember> implements ServiceProviderRegistrar<T, M> {
-
-	private final Set<T> services = ConcurrentHashMap.newKeySet();
-	private final Group<M> group;
-
-	public LocalServiceProviderRegistrar(Group<M> group) {
-		this.group = group;
-	}
+public interface LocalServiceProviderRegistrar<T> extends ServiceProviderRegistrar<T, LocalGroupMember> {
 
 	@Override
-	public Group<M> getGroup() {
-		return this.group;
-	}
+	LocalGroup getGroup();
 
-	@Override
-	public ServiceProviderRegistration<T, M> register(T service) {
-		this.services.add(service);
-		return new DefaultServiceProviderRegistration<>(this, service, () -> this.services.remove(service));
-	}
+	static <T> LocalServiceProviderRegistrar<T> of(LocalGroup group) {
+		Set<T> services = ConcurrentHashMap.newKeySet();
+		return new LocalServiceProviderRegistrar<>() {
+			@Override
+			public LocalGroup getGroup() {
+				return group;
+			}
 
-	@Override
-	public ServiceProviderRegistration<T, M> register(T service, ServiceProviderListener<M> listener) {
-		return this.register(service);
-	}
+			@Override
+			public ServiceProviderRegistration<T, LocalGroupMember> register(T service) {
+				services.add(service);
+				return new DefaultServiceProviderRegistration<>(this, service, () -> services.remove(service));
+			}
 
-	@Override
-	public Set<M> getProviders(T service) {
-		return this.services.contains(service) ? Set.of(this.group.getLocalMember()) : Set.of();
-	}
+			@Override
+			public ServiceProviderRegistration<T, LocalGroupMember> register(T service, ServiceProviderListener<LocalGroupMember> listener) {
+				return this.register(service);
+			}
 
-	@Override
-	public Set<T> getServices() {
-		return Collections.unmodifiableSet(this.services);
+			@Override
+			public Set<LocalGroupMember> getProviders(T service) {
+				return services.contains(service) ? Set.of(group.getLocalMember()) : Set.of();
+			}
+
+			@Override
+			public Set<T> getServices() {
+				return Collections.unmodifiableSet(services);
+			}
+		};
 	}
 }
